[gd_scene load_steps=7 format=3 uid="uid://bcq38fa835j77"]

[ext_resource type="Script" path="res://main/main.gd" id="1_yjvpm"]
[ext_resource type="PackedScene" uid="uid://bleb7stis2t5i" path="res://main/game.tscn" id="4_aqcv5"]
[ext_resource type="Texture2D" uid="uid://bacxl08g3s3po" path="res://player/heart.png" id="5_rb6n4"]
[ext_resource type="Script" path="res://player/health_control.gd" id="5_u8oc8"]
[ext_resource type="PackedScene" uid="uid://bp2d6dstu20qv" path="res://menu_death/menu_death.tscn" id="6_pgq8b"]

[sub_resource type="LabelSettings" id="LabelSettings_r58hd"]

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_yjvpm")

[node name="Game" parent="." instance=ExtResource("4_aqcv5")]

[node name="PausedContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="PausedContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_r58hd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -127.0
offset_top = 63.0
offset_right = 127.0
offset_bottom = 71.0
script = ExtResource("5_u8oc8")
texture = ExtResource("5_rb6n4")
region = Rect2(0, 0, 8, 8)

[node name="MenuDeathParent" type="Control" parent="."]
custom_minimum_size = Vector2(256, 144)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MenuDeath" parent="MenuDeathParent" node_paths=PackedStringArray("start_again_select_label", "quit_select_label", "you_cant_go_label") instance=ExtResource("6_pgq8b")]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 1
start_again_select_label = NodePath("Control/CenterContainer2/HBoxContainer/SelectLabel")
quit_select_label = NodePath("Control/CenterContainer3/HBoxContainer/SelectLabel")
you_cant_go_label = NodePath("Control/CenterContainer4/YouCantGoLabel")
metadata/_edit_use_anchors_ = true
